[project]
name = "steam-python"
version = "0.0.1"
description = "A fast and lightweight Python interface for interacting with Steam asynchronously."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "protobuf (>=6.33.2,<7.0.0)",
]

[dependency-groups]
dev = [
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocstrings[python] (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steam"]
